fix score container size so text does not wrap

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -269,7 +269,7 @@
   --header-padding: 16px 0 16px 0;
   --plugin-icon-size: 75%;
   --pwa-icon-margin: 0 7px 0 -3px;
-  --score-container-width: 92px;
+  --score-container-width: 97px;
   --score-number-font-size-big: 34px;
   --score-number-font-size: 26px;
   --score-shape-margin-left: 2px;
